cmake_minimum_required(VERSION 2.6)
project(barcode_finder C)
add_executable(barcode_finder main.c fft/fft_brin.c fft/FFT_Code_Tables.c)
find_package(JPEG REQUIRED)
include_directories(fft ${JPEG_INCLUDE_DIR})
target_link_libraries(barcode_finder m ${JPEG_LIBRARIES})
set(CMAKE_C_FLAGS "-std=c99 -Wall")
add_definitions(-DITU_R_INT -DNUM_FFT=512)
install(TARGETS barcode_finder DESTINATION bin)
